# harmony_markget_get

./: .gitignore  API.md  Cargo.toml  MODIFICATIONS_SUMMARY.md  README.md  config.example.toml  guess.py  info.md  runit.py  update.md
assets/html/: main.html
assets/js/: dashboard.js
assets/js/modules/: app-details.js  charts.js  data-loaders.js  renderers.js  utils.js
assets/sql/: main.sql  top100.sql  update_data.sql
assets/sql/clean_data/: clean.app_raw_data.sql  clean.app_raw_null.sql  clean_app_raw.sql  update_listed_at.sql
assets/sql/migrations/: README.md
assets/sql/migrations/006_add_comment_and_listed_at_to_app_info/: 001_add_comment_to_app_info.sql
assets/sql/migrations/006_add_comment_to_app_info/: 001_add_comment_to_app_info.sql  MIGRATION_ORDER.md
assets/sql/migrations/008_add_device_and_country_fields/: 002_update_view.sql
assets/sql/migrations/009_spilt_app_raw/: 001_just_do_it.sql
assets/sql/migrations/010_add_substance/: runit.sql
frontend/: package.json  rsbuild.config.ts
frontend/src/: README.md  config.ts  index.css  index.html  index.ts
frontend/src/modules/: app-query.ts  dark-mode.ts  event-listeners.ts
frontend/src/scripts/: dashboard-init.ts
frontend/src/stores/: dashboard.ts
frontend/src/styles/: dark-mode.css
frontend/src/utils/: api.ts  app-details.ts  charts.ts  clipboard.ts  dom.ts  index.ts  notifications.ts  types.ts  url-params.ts
frontend/src/utils/constants/: index.ts
frontend/src/utils/formatters/: index.ts
import_data/: get_old.py  get_pc.py
read_appgallery/: Cargo.toml
read_appgallery/src/: main.rs
sql/: main.sql
sql/migrations/002_split_tables/: 001_create_app_rating_and_migrate_data.sql  MIGRATION_ORDER.md
src/: config.rs  datas.rs  db.rs  get_nextmax.rs  guess.rs  guess_from_db.rs  guess_large.rs  guess_market.rs  guess_rand.rs  lib.rs  main.rs  read_appgallery.rs  read_pkg_name.rs  server.rs  sync.rs  utils.rs
src/db/: insert.rs  mod.rs  query.rs  read_data.rs
src/model/: mod.rs  query.rs  raw.rs
src/server/: frontend_handlers.rs  handle_static.rs  handlers.rs  mod.rs  routes.rs  state.rs
src/sync/: code.rs  identy_id.rs  interface_code.rs  mod.rs  substance.rs
