[package]
name = "get_market"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"

chrono = { version = "0.4.41", default-features = false, features = [
  "alloc",
  "clock",
  "now",
  "serde",
  "std",
] }

colored = "3.0.0"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }

sqlx = { version = "0.8.6", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
tokio = { version = "1.47", features = ["full"] }

toml = "0.9"
serde = "1.0"
serde_json = "1.0"
axum = "0.8.4"
