[package]
name = "get_market"
version = "0.3.0"
edition = "2024"
default-run = "get_market"

[[bin]]
name = "guess_market"
path = "src/guess.rs"

[[bin]]
name = "guess_from_db"
path = "src/guess_from_db.rs"

[[bin]]
name = "get_nextmax"
path = "src/get_nextmax.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = [
  # "macros"
] }
chrono = { version = "0.4.41", default-features = false, features = [
  "alloc",
  "clock",
  "now",
  "serde",
  "std",
] }
colored = "3.0.0"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
serde = "1.0"
toml = "0.9"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
tokio = { version = "1.47", features = ["full"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.20"

uuid = { version = "1.18.1", features = ["v4", "rng-rand"] }
