[package]
name = "read_appgallery"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

uuid = { workspace = true }
get_market = { path = "../" }
